--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-builder-bob": "^0.29.0",
+    "react-native-webview": "13.8.6",
     "release-it": "^15.0.0",
     "typescript": "^5.2.2"
   },
@@ -87,7 +88,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-webview": "*"
   },
   "workspaces": [
     "example"
