build: add react-dom, slate, slate-react | update react, react-native, react-native-webview

--- a/package.json
+++ b/package.json
@@ -62,6 +62,11 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
+  "dependencies": {
+    "react-dom": "^18.2.0",
+    "slate": "^0.103.0",
+    "slate-react": "^0.107.1"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.5.0",
@@ -76,10 +81,10 @@
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "^18.2.0",
+    "react-native": "^0.74.5",
     "react-native-builder-bob": "^0.29.0",
-    "react-native-webview": "13.8.6",
+    "react-native-webview": "^13.8.6",
     "release-it": "^15.0.0",
     "typescript": "^5.2.2"
   },
