--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@totemwt/react-native-text-editor",
+  "name": "react-native-blackboard",
   "version": "0.1.0",
   "description": "React Native Rich Text Editor",
   "source": "./src/index.tsx",
@@ -36,7 +36,8 @@
     "!**/.*"
   ],
   "scripts": {
-    "example": "yarn workspace @totemwt/react-native-text-editor-example",
+    "editor:start": "vite --host",
+    "example": "yarn workspace react-native-blackboard-example",
     "test": "jest",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
@@ -51,19 +52,19 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/totemwt/react-native-text-editor.git"
+    "url": "git+https://github.com/damonturcotte/react-native-blackboard.git"
   },
-  "author": "Damon Turcotte <damon.j.turcotte@gmail.com> (https://github.com/totemwt)",
+  "author": "Damon Turcotte <damon.j.turcotte@gmail.com> (https://github.com/damonturcotte)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/totemwt/react-native-text-editor/issues"
+    "url": "https://github.com/damonturcotte/react-native-blackboard/issues"
   },
-  "homepage": "https://github.com/totemwt/react-native-text-editor#readme",
+  "homepage": "https://github.com/damonturcotte/react-native-blackboard#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "slate": "^0.103.0",
     "slate-react": "^0.107.1"
   },
@@ -74,6 +75,8 @@
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.44",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "commitlint": "^17.0.2",
     "del-cli": "^5.1.0",
     "eslint": "^8.51.0",
@@ -81,12 +84,15 @@
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-builder-bob": "^0.29.0",
     "react-native-webview": "^13.8.6",
     "release-it": "^15.0.0",
-    "typescript": "^5.2.2"
+    "rollup": "^4.20.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.4.0",
+    "vite-plugin-singlefile": "^2.0.2"
   },
   "resolutions": {
     "@types/react": "^18.2.44"
