--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "paths": {
-      "@totemwt/react-native-text-editor": ["./src/index"] // import * from '@totemwt/react-native-text-editor'
+      "react-native-blackboard": ["./src/index"] // import * from 'react-native-blackboard'
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
@@ -25,5 +25,6 @@
     "strict": true,
     "target": "ESNext",
     "verbatimModuleSyntax": true
-  }
+  },
+  "exclude": ["./src/webEditor", "./src/webEditorUtils", "./src/webEditorUtils/vite.config.ts"]
 }
