--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@totemwt/react-native-text-editor-example",
+  "name": "react-native-blackboard-example",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -13,12 +13,12 @@
     "expo": "~51.0.25",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "^0.74.5",
-    "react-native-safe-area-context": "^4.10.5",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.8.6"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
